# primepobre

./: .gitignore  Cargo.toml  docker-compose.yml
public/: index.html  stream.html
src/: main.rs
src/models/: mod.rs
videos/: sample.mov
