[package]
name = "primepobre"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0"
tokio-stream = { version = "0.1.16", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["json", "multipart", "blocking", "stream"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"


