[package]
name = "primepobre"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-prometheus = "0.1.2"
env_logger = "0.11.5"
prometheus-client = "0.22.3"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls", "blocking", "stream"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = "1.41.0"
tokio-stream = { version = "0.1.16", features = ["full"] }
tracing-loki = "0.2.5"
